--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.115.14,<0.116.0)",
-    "fastapi-cli (>=0.0.7,<0.0.8)"
+    "fastapi-cli (>=0.0.7,<0.0.8)",
+    "sqlalchemy (>=2.0.41,<3.0.0)"
 ]
 
 
